# SDL2_CMake_Base

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
src/: main.cpp
